# observe

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.3c2acb5  CMakeLists.txt.user.5183586  Calendar.qml  Main.qml  Main.qml.autosave  MyCalendar.qml  README.md  calculate_positions.cpp  calculate_positions.h  datamanager.cpp  datamanager.h  datastructures.h  el_math.h  exiftool.htm  images.qrc  main.cpp  orbital_elements.txt  planetmodel.cpp  planetmodel.h  position_calculator.cpp  position_calculator.h  selectionhandler.cpp  selectionhandler.h  star.frag  star.vert  starInstanceTable.cpp  starInstanceTable.h  style.qml  types.h  vector3dlistmodel.cpp  vector3dlistmodel.h
